[gd_scene load_steps=5 format=1]

[ext_resource path="res://themes/menu.tres" type="Theme" id=1]
[ext_resource path="res://scripts/menu/load.gd" type="Script" id=2]
[ext_resource path="res://assets/menu/bg2.png" type="Texture" id=3]
[ext_resource path="res://scenes/menu/saveFunctions.tscn" type="PackedScene" id=4]

[node name="Control" type="Control"]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
theme/theme = ExtResource( 1 )
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0
script/script = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="background" type="TextureFrame" parent="."]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -200.0
margin/top = 0.0
margin/right = -200.0
margin/bottom = 0.0
texture = ExtResource( 3 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_lock_": true
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 550.0
margin/top = 20.0
margin/right = 550.0
margin/bottom = 20.0
custom_constants/separation = 0
alignment = 0
__meta__ = {
"_edit_lock_": true
}

[node name="menuTitle" type="Label" parent="VBoxContainer"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 0
size_flags/vertical = 0
margin/left = 247.0
margin/top = 0.0
margin/right = 572.0
margin/bottom = 40.0
text = "Charger une partie"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
__meta__ = {
"_edit_lock_": true
}

[node name="saveAutoBox" type="VBoxContainer" parent="VBoxContainer"]

rect/min_size = Vector2( 0, 160 )
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 1
margin/left = 0.0
margin/top = 80.0
margin/right = 820.0
margin/bottom = 240.0
custom_constants/separation = 20
alignment = 0
__meta__ = {
"_edit_lock_": true
}

[node name="saveAutoDisplayBox" type="HBoxContainer" parent="VBoxContainer/saveAutoBox"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 820.0
margin/bottom = 100.0
alignment = 0

[node name="previewAuto" type="TextureFrame" parent="VBoxContainer/saveAutoBox/saveAutoDisplayBox"]

rect/min_size = Vector2( 178, 100 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 178.0
margin/bottom = 100.0
stretch_mode = 0
__meta__ = {
"_edit_lock_": true
}

[node name="saveTextAutoContainer" type="VBoxContainer" parent="VBoxContainer/saveAutoBox/saveAutoDisplayBox"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 3
size_flags/vertical = 3
margin/left = 178.0
margin/top = 0.0
margin/right = 820.0
margin/bottom = 100.0
alignment = 0
__meta__ = {
"_edit_lock_": true
}

[node name="saveTextAuto" type="RichTextLabel" parent="VBoxContainer/saveAutoBox/saveAutoDisplayBox/saveTextAutoContainer"]

rect/min_size = Vector2( 0, 100 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 642.0
margin/bottom = 100.0
bbcode/enabled = false
bbcode/bbcode = "Emplacement"
visible_characters = -1
__meta__ = {
"_edit_lock_": true
}

[node name="saveAutoButtonsBox" type="HBoxContainer" parent="VBoxContainer/saveAutoBox"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 120.0
margin/right = 820.0
margin/bottom = 160.0
alignment = 0
__meta__ = {
"_edit_lock_": true
}

[node name="loadButtonAuto" type="Button" parent="VBoxContainer/saveAutoBox/saveAutoButtonsBox"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 410.0
margin/bottom = 40.0
toggle_mode = false
enabled_focus_mode = 0
shortcut = null
text = "Charger"
flat = false
__meta__ = {
"_edit_lock_": true
}

[node name="deleteButtonAuto" type="Button" parent="VBoxContainer/saveAutoBox/saveAutoButtonsBox"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 2
margin/left = 410.0
margin/top = 0.0
margin/right = 820.0
margin/bottom = 40.0
toggle_mode = false
enabled_focus_mode = 0
shortcut = null
text = "Supprimer"
flat = false
__meta__ = {
"_edit_lock_": true
}

[node name="saveSlot1Box" type="VBoxContainer" parent="VBoxContainer"]

rect/min_size = Vector2( 0, 160 )
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 1
margin/left = 0.0
margin/top = 320.0
margin/right = 820.0
margin/bottom = 480.0
custom_constants/separation = 20
alignment = 0
__meta__ = {
"_edit_lock_": true
}

[node name="saveSlot1DisplayBox" type="HBoxContainer" parent="VBoxContainer/saveSlot1Box"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 820.0
margin/bottom = 100.0
alignment = 0

[node name="previewSlot1" type="TextureFrame" parent="VBoxContainer/saveSlot1Box/saveSlot1DisplayBox"]

rect/min_size = Vector2( 178, 100 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 178.0
margin/bottom = 100.0
stretch_mode = 0
__meta__ = {
"_edit_lock_": true
}

[node name="saveTextSlot1" type="RichTextLabel" parent="VBoxContainer/saveSlot1Box/saveSlot1DisplayBox"]

rect/min_size = Vector2( 0, 100 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 3
margin/left = 178.0
margin/top = 0.0
margin/right = 820.0
margin/bottom = 100.0
bbcode/enabled = false
bbcode/bbcode = "Sauvegarde 1"
visible_characters = -1
__meta__ = {
"_edit_lock_": true
}

[node name="saveSlot1ButtonsBox" type="HBoxContainer" parent="VBoxContainer/saveSlot1Box"]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 120.0
margin/right = 820.0
margin/bottom = 160.0
alignment = 0
__meta__ = {
"_edit_lock_": true
}

[node name="loadButtonSlot1" type="Button" parent="VBoxContainer/saveSlot1Box/saveSlot1ButtonsBox"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 3
margin/left = 0.0
margin/top = 0.0
margin/right = 410.0
margin/bottom = 40.0
toggle_mode = false
enabled_focus_mode = 0
shortcut = null
text = "Charger"
flat = false
__meta__ = {
"_edit_lock_": true
}

[node name="deleteButtonSlot1" type="Button" parent="VBoxContainer/saveSlot1Box/saveSlot1ButtonsBox"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 3
margin/left = 410.0
margin/top = 0.0
margin/right = 820.0
margin/bottom = 40.0
toggle_mode = false
enabled_focus_mode = 0
shortcut = null
text = "Supprimer"
flat = false
__meta__ = {
"_edit_lock_": true
}

[node name="saveSlot2Box" type="VBoxContainer" parent="VBoxContainer"]

rect/min_size = Vector2( 0, 160 )
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 1
margin/left = 0.0
margin/top = 560.0
margin/right = 820.0
margin/bottom = 720.0
custom_constants/separation = 20
alignment = 0
__meta__ = {
"_edit_lock_": true
}

[node name="saveSlot2DisplayBox" type="HBoxContainer" parent="VBoxContainer/saveSlot2Box"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 820.0
margin/bottom = 100.0
alignment = 0

[node name="previewSlot2" type="TextureFrame" parent="VBoxContainer/saveSlot2Box/saveSlot2DisplayBox"]

rect/min_size = Vector2( 178, 100 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 178.0
margin/bottom = 100.0
stretch_mode = 0
__meta__ = {
"_edit_lock_": true
}

[node name="saveTextSlot2" type="RichTextLabel" parent="VBoxContainer/saveSlot2Box/saveSlot2DisplayBox"]

rect/min_size = Vector2( 0, 100 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 3
margin/left = 178.0
margin/top = 0.0
margin/right = 820.0
margin/bottom = 100.0
bbcode/enabled = false
bbcode/bbcode = "Sauvegarde 2"
visible_characters = -1
__meta__ = {
"_edit_lock_": true
}

[node name="saveSlot2ButtonsBox" type="HBoxContainer" parent="VBoxContainer/saveSlot2Box"]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 120.0
margin/right = 820.0
margin/bottom = 160.0
alignment = 0
__meta__ = {
"_edit_lock_": true
}

[node name="loadButtonSlot2" type="Button" parent="VBoxContainer/saveSlot2Box/saveSlot2ButtonsBox"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 3
margin/left = 0.0
margin/top = 0.0
margin/right = 410.0
margin/bottom = 40.0
toggle_mode = false
enabled_focus_mode = 0
shortcut = null
text = "Charger"
flat = false
__meta__ = {
"_edit_lock_": true
}

[node name="deleteButtonSlot2" type="Button" parent="VBoxContainer/saveSlot2Box/saveSlot2ButtonsBox"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 3
margin/left = 410.0
margin/top = 0.0
margin/right = 820.0
margin/bottom = 40.0
toggle_mode = false
enabled_focus_mode = 0
shortcut = null
text = "Supprimer"
flat = false
__meta__ = {
"_edit_lock_": true
}

[node name="saveSlot3Box" type="VBoxContainer" parent="VBoxContainer"]

rect/min_size = Vector2( 0, 160 )
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 1
margin/left = 0.0
margin/top = 800.0
margin/right = 820.0
margin/bottom = 960.0
custom_constants/separation = 20
alignment = 0
__meta__ = {
"_edit_lock_": true
}

[node name="saveSlot3DisplayBox" type="HBoxContainer" parent="VBoxContainer/saveSlot3Box"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 820.0
margin/bottom = 100.0
alignment = 0

[node name="previewSlot3" type="TextureFrame" parent="VBoxContainer/saveSlot3Box/saveSlot3DisplayBox"]

rect/min_size = Vector2( 178, 100 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 178.0
margin/bottom = 100.0
stretch_mode = 0
__meta__ = {
"_edit_lock_": true
}

[node name="saveTextSlot3" type="RichTextLabel" parent="VBoxContainer/saveSlot3Box/saveSlot3DisplayBox"]

rect/min_size = Vector2( 0, 100 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 3
margin/left = 178.0
margin/top = 0.0
margin/right = 820.0
margin/bottom = 100.0
bbcode/enabled = false
bbcode/bbcode = "Sauvegarde 3"
visible_characters = -1
__meta__ = {
"_edit_lock_": true
}

[node name="saveSlot3ButtonsBox" type="HBoxContainer" parent="VBoxContainer/saveSlot3Box"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 120.0
margin/right = 820.0
margin/bottom = 160.0
alignment = 0
__meta__ = {
"_edit_lock_": true
}

[node name="loadButtonSlot3" type="Button" parent="VBoxContainer/saveSlot3Box/saveSlot3ButtonsBox"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 3
margin/left = 0.0
margin/top = 0.0
margin/right = 410.0
margin/bottom = 40.0
toggle_mode = false
enabled_focus_mode = 0
shortcut = null
text = "Charger"
flat = false
__meta__ = {
"_edit_lock_": true
}

[node name="deleteButtonSlot3" type="Button" parent="VBoxContainer/saveSlot3Box/saveSlot3ButtonsBox"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 3
margin/left = 410.0
margin/top = 0.0
margin/right = 820.0
margin/bottom = 40.0
toggle_mode = false
enabled_focus_mode = 0
shortcut = null
text = "Supprimer"
flat = false
__meta__ = {
"_edit_lock_": true
}

[node name="returnButton" type="Button" parent="VBoxContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 0
size_flags/vertical = 2
margin/left = 352.0
margin/top = 1000.0
margin/right = 467.0
margin/bottom = 1040.0
toggle_mode = false
enabled_focus_mode = 0
shortcut = null
text = "Retour"
flat = false
__meta__ = {
"_edit_lock_": true
}

[node name="saveFunctions" parent="." instance=ExtResource( 4 )]

[connection signal="pressed" from="VBoxContainer/returnButton" to="." method="_on_returnButton_pressed"]


